# ragxuary

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
.github/workflows/: generate-client.yml  pre-commit.yml  test-docker-compose.yml  (+1 more)
api/: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  ruff.toml
backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260117_382d1adc3c37_create_users_and_projects_tables.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: database.py  redis.py
backend/app/models/: __init__.py  project.py  user.py
backend/app/repositories/: user.py
backend/app/schemas/: auth.py  project.py  user.py
backend/tests/: conftest.py  test_auth.py
docs/:  REQUIREMENTS.md  DEVELOPMENT.md  REQUIREMENTS.md  database-schema.md  requirements.md
frontend/: .prettierrc  AGENTS.md  Dockerfile  auth.ts  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
scripts/: generate-client.sh  verify.sh
web/: .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  auth.ts  biome.json  eslint.config.mjs  middleware.ts  next.config.ts  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
(+355 files in other folders)
